helm_chart/patient-hiu/patient-hiu-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: patient-hiu
  namespace: nha-app
  labels:
    app: patient-hiu
spec:
  replicas: 1
  selector:
    matchLabels:
      app: patient-hiu
  template:
    metadata:
      labels:
        app: patient-hiu
    spec:
      containers:
        - name: patient-hiu
          image: ganesan92/health-information-user:de5346f
          imagePullPolicy: Always
          resources:
            requests:
              cpu: "500m"
              memory: "1024Mi"
            limits:
              cpu: "500m"
              memory: "1024Mi"
          livenessProbe:
            httpGet:
              path: /v0.5/heartbeat
              port: 8003
            initialDelaySeconds: 120
            timeoutSeconds: 10
          readinessProbe:
            httpGet:
              path: /v0.5/heartbeat
              port: 8003
            initialDelaySeconds: 120
            timeoutSeconds: 10
          ports:
            - name: http
              containerPort: 8003
              protocol: TCP
          volumeMounts:
            - name: patient-hiu-data
              mountPath: /mnt/patient-hiu-data
      volumes:
        - name: patient-hiu-data
          persistentVolumeClaim:
              claimName: patient-hiu-data
