helm_chart/patient-hiu/patient-hiu-virtualservice.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: hiu
  namespace: nha-app
spec:
  gateways:
    - nha-gateway
  hosts:
    - dev.ndhm.gov.in
  http:
    - match:
        - uri:
            prefix: /hiu-api/
      rewrite:
        uri: /
      route:
        - destination:
            host: hiu
            port:
              number: 8003
    - match:
        - uri:
            prefix: /swagger.yaml
      route:
        - destination:
            host: hiu
            port:
              number: 8003
    - match:
        - uri:
            prefix: /dicom-web/
      route:
        - destination:
            host: orthanc
            port:
              number: 8042
    - match:
        - uri:
            regex: /viewer/[\w-.?=]+
      rewrite:
        uri: /dicomIndex
      route:
        - destination:
            host: hiu-ui
            port:
              number: 5000
    - match:
        - uri:
            prefix: /hiu/
      rewrite:
        uri: /
      route:
        - destination:
            host: hiu-ui
            port:
              number: 5000
    - match:
        - uri:
            prefix: /bundle.js
      route:
        - destination:
            host: hiu-ui
            port:
              number: 5000
    - match:
        - uri:
            prefix: /hiu
      rewrite:
        uri: /
      route:
        - destination:
            host: hiu-ui
            port:
              number: 5000
